--- a/app/src/styles/global.scss
+++ b/app/src/styles/global.scss
@@ -1,9 +1,9 @@
-@import "./variables";
+@use "./variables" as *;
 
 body {
-  font-family: 'Inter', sans-serif;
-  background-color: $bg-color;
-  color: $text-color;
+  font-family: "Inter", sans-serif;
+  background-color: #f9f9f9;
+  color: #333;
 }
 
 .page-container {
